force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__DefaultSearchCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultSearchCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the parent category is in context the page should show content from this category by default.</description>
    <label>Default Search Category</label>
    <type>Checkbox</type>
</CustomField>