force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>Stores description of the category node.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>