force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__IsHidden__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the category is hidden in the tab or carousal.</description>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>