force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__IsPicklist__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to display the options as pick list values.</description>
    <inlineHelpText>When checked the options within this option group will be displayed as picklist values</inlineHelpText>
    <label>Is Picklist</label>
    <type>Checkbox</type>
</CustomField>