force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Label__c</fullName>
    <description>The label for the category</description>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>