force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__LargeIconId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LargeIconId__c</fullName>
    <description>Stores Id of the attachment object representing a large icon for the category hierarchy node.</description>
    <inlineHelpText>Stores Id of the attachment object representing a large icon for the category hierarchy node.</inlineHelpText>
    <label>Large Icon Image</label>
    <length>32</length>
    <type>Text</type>
</CustomField>