force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__LongDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LongDescription__c</fullName>
    <description>Long description can store rich text for enhanced display of description</description>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>