force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__MaxOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxOptions__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The maximum number of options that may be selected from the group. The number can be zero. This is not applicable to offerings.</description>
    <label>Max Options</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>