force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__Modifiable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Modifiable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the option group or its components are modifiable during selection.  This is not applicable to offerings.</description>
    <label>Modifiable</label>
    <type>Checkbox</type>
</CustomField>