force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__ProductAttributeGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the attribute group associated with the category</description>
    <inlineHelpText>ID of the attribute group associated with the category</inlineHelpText>
    <label>Product Attribute Group</label>
    <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
    <relationshipLabel>Category Hierarchies</relationshipLabel>
    <relationshipName>CategoryHierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>