force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__SearchFilterFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchFilterFields__c</fullName>
    <description>List of product fields of Checkbox or Picklist type that can be used for refining search results.</description>
    <inlineHelpText>List of product fields of Checkbox or Picklist type that can be used for refining search results.</inlineHelpText>
    <label>Search Filter Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>