force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>Apttus_Config2__Label__c</columns>
    <columns>NAME</columns>
    <columns>Apttus_Config2__ProductCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>